--- a/trunk/MainUI.lfm
+++ b/trunk/MainUI.lfm
@@ -5,7 +5,7 @@ object MainForm: TMainForm
   Width = 1143
   ActiveControl = ListboxPanel
   Caption = 'Ocrivist'
-  ClientHeight = 697
+  ClientHeight = 695
   ClientWidth = 1143
   Icon.Data = {
     BE1000000000010001002020000001002000A810000016000000280000002000
@@ -153,12 +153,12 @@ object MainForm: TMainForm
   WindowState = wsMaximized
   object ListboxPanel: TPanel
     Left = 0
-    Height = 636
+    Height = 632
     Top = 42
     Width = 179
     Align = alLeft
     Caption = 'ListboxPanel'
-    ClientHeight = 636
+    ClientHeight = 632
     ClientWidth = 179
     TabOrder = 1
     object ThumbnailListBox: TListBox
@@ -168,7 +168,7 @@ object MainForm: TMainForm
       AnchorSideRight.Side = asrBottom
       AnchorSideBottom.Control = pagecountLabel
       Left = 1
-      Height = 615
+      Height = 609
       Top = 1
       Width = 177
       Anchors = [akTop, akLeft, akRight, akBottom]
@@ -189,8 +189,8 @@ object MainForm: TMainForm
     end
     object pagecountLabel: TLabel
       Left = 8
-      Height = 16
-      Top = 616
+      Height = 18
+      Top = 610
       Width = 5
       Anchors = [akLeft, akBottom]
       Caption = ' '
@@ -199,7 +199,7 @@ object MainForm: TMainForm
   end
   object Splitter1: TSplitter
     Left = 179
-    Height = 636
+    Height = 632
     Top = 42
     Width = 5
   end
@@ -287,13 +287,13 @@ object MainForm: TMainForm
   end
   object MainPanel: TPanel
     Left = 184
-    Height = 636
+    Height = 632
     Top = 42
     Width = 784
     Align = alClient
     AutoSize = True
     Caption = 'MainPanel'
-    ClientHeight = 636
+    ClientHeight = 632
     ClientWidth = 784
     TabOrder = 3
     object PageToolBar: TToolBar
@@ -435,8 +435,8 @@ object MainForm: TMainForm
   end
   object StatusBar: TStatusBar
     Left = 0
-    Height = 19
-    Top = 678
+    Height = 21
+    Top = 674
     Width = 1143
     Panels = <    
       item
@@ -464,7 +464,7 @@ object MainForm: TMainForm
     TabOrder = 0
     object DjvuButton: TToolButton
       Tag = 1
-      Left = 221
+      Left = 181
       Hint = 'Export to DJVU'
       Top = 2
       Caption = 'DjvuButton'
@@ -521,7 +521,7 @@ object MainForm: TMainForm
       TabOrder = 0
       object LanguageComboBox: TComboBox
         Left = 13
-        Height = 27
+        Height = 29
         Hint = 'Set language for OCR'
         Top = 6
         Width = 148
@@ -536,7 +536,7 @@ object MainForm: TMainForm
       end
     end
     object PDFToolButton: TToolButton
-      Left = 181
+      Left = 221
       Hint = 'Export as PDF'
       Top = 2
       Caption = 'PDFToolButton'
@@ -562,7 +562,7 @@ object MainForm: TMainForm
   end
   object RightSidePanel: TPanel
     Left = 973
-    Height = 636
+    Height = 632
     Top = 42
     Width = 170
     Align = alRight
@@ -570,7 +570,7 @@ object MainForm: TMainForm
   end
   object Splitter2: TSplitter
     Left = 968
-    Height = 636
+    Height = 632
     Top = 42
     Width = 5
     Align = alRight
@@ -693,11 +693,9 @@ object MainForm: TMainForm
         Visible = False
         object UnsharpMenuItem: TMenuItem
           Caption = 'Sharpen'
-          OnClick = UnsharpMenuItemClick
         end
         object ContrastMenuItem: TMenuItem
           Caption = 'Contrast'
-          OnClick = ContrastMenuItemClick
         end
       end
     end
@@ -758,6 +756,10 @@ object MainForm: TMainForm
         Caption = '&About Ocrivist'
         OnClick = AboutMenuItemClick
       end
+    end
+    object DebugMenuItem: TMenuItem
+      Caption = 'Debug'
+      OnClick = DebugMenuItemClick
     end
   end
   object SaveDialog: TSaveDialog
@@ -1115,45 +1117,45 @@ object MainForm: TMainForm
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF008D37443894414F8198485683CFA8AFB0B47A8598BB868E9ECA9F
-      A6AC923B4981903B4981903949818E3947818E3747818E3547818E3545818C33
-      45818C3345818C3143818C3141818C3141818C2F41818C2F41818A2F4181872E
-      3F59FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      A6AC923B4981903B4981903949818E3947818E3747818E3547818E3545817C29
+      38E56C2533BA8C3143818C3141818C3141508C2F41008C2F41008A2F4100872E
+      3F00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF009641508DCB9AA9F9D4A9
       B7F8C399ADFBF5EFF2FFD1A8B8FADECBD5FEDCBBC7FCC08099F8BD7994F8BA73
-      8FF8B76B89F8B36584F8B05E80F8AD577AF8AA5074F8A84A6FF8A74A6EF8A649
-      6DF8A3486BF8A2476AF8A24768F98C2F44C7FFFFFF00FFFFFF00FFFFFF00FFFF
+      8FF8B76B89F8B36584F8B05E80F86C2737FF4E232BFF993D59FBA74A6EF8A649
+      6DD9A3486B17A2476A00A24768008C2F4400FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF009D4F5D92D3A7B7F8DDB6C8F7D9AEC2F7C29DB1FCF5EFF2FEC798
-      AFFAECE2E8FED5A6BBF9C37D9DF7BF7596F7BB6D90F7B7658AF7B35D84F7B055
-      7EF7AD4F7AF7AB4F78F7AA4E76F7A94D74F7A74C72F7A64B71F8A5496FF88C31
-      43C6FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      AFFAECE2E8FED5A6BBF9C37D9DF7BF7596F7BB6D90F7B7658AF7B35D84F76D27
+      39FF542D35FF8B414FFF9B3F5DFAA94D74F7A74C7287A64B7100A5496F008C31
+      4300FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00C79FA9C0D0A0B2F8D8AB
       C0F7D5A3BAF7D09BB2F7C6A5B7FDEFE3E9FEBB88A2FBF2EAEEFEC686A3F8BA6A
-      8EF7B66288F7B25A82F7AE527CF7AC4F79F7AB4F77F7AA4D75F7A84C74F7A74B
-      72F7A64A70F8A3496EF8A3486DF88C3043C6FFFFFF00FFFFFF00FFFFFF00FFFF
+      8EF7B66288F7B25A82F7AE527CF76E283AFF59363DFF975562FF8B414FFF993D
+      5BFAA64A70D9A3496E31A3486D008C304300FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00B28191C1E8D6DDFDDAB3C5F9EAD5DFFCCC91ABF7C486A2F8D2B9
-      C8FEE4C9D6FCB98DA5FDEFE2E9FEB8678BF7B15880F7AD4F7AF7AC4F79F7AB4E
-      77F7A94D75F7A84C73F7A74B71F8A54A70F8A3496EF8A3486CF8A1476AF88C30
-      42C6FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      C8FEE4C9D6FCB98DA5FDEFE2E9FEB8678BF7B15880F7AD4F7AF7AC4F79F76F29
+      3BFF5E3E46FFA26773FF975562FF8B414FFF963D58FBA3486CADA1476A0E8C30
+      4200FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0093405293DECCD6FEE0C2
       D0FCDDCBD5FEDEBDCCFBC37E9DF7B97494F8E1D1DAFED3A6BAFBC8A6B9FEE3CA
-      D6FDAD517BF7AC4F78F7AA4E76F7A94D74F7A84C73F7A64B71F8A54A6FF8A348
-      6DF8A2476BF8A1466AF8A04568F98B3042C6FFFFFF00FFFFFF00FFFFFF00FFFF
+      D6FDAD517BF7AC4F78F7AA4E76F770293DFF64474FFFAD7884FFA26673FF9755
+      62FF8B414FFF933A55FBA04568AE8B304216FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00923C4A8DB98097FAEADFE6FFCFA8BBFBEBDEE5FED09CB3F9BA6B
-      90F7B16C8DF9EEE3E9FEBF809CFADAC5D1FED2A7BAFBAA4E76F7A94C74F7A74B
-      72F7A64A70F8A5496EF8A3486DF8A2476BF8A14669F89F4567F99E4465F98B30
-      42C6FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      90F7B16C8DF9EEE3E9FEBF809CFADAC5D1FED2A7BAFBAA4E76F7A94C74F7712A
+      3FFF695057FFB88996FFAD7884FFA26673FF975562FF8B414FFF923952FC8B30
+      429EFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00913A4A8DBE7A95F8B882
       9EFBF1E8EDFFC292AAFBF0E5EBFFC07999F8B15981F7B07293FCF3E9EEFEB46D
-      8DFAEADEE4FFC4849FF9A74B72F8A54A70F8A3496EF8A3486CF8A1476AF8A046
-      69F99F4567F99D4365F99C4263F98B3042C6FFFFFF00FFFFFF00FFFFFF00FFFF
+      8DFAEADEE4FFC4849FF9A74B72F8722C41FF6F5860FFC39BA7FFB88996FFAD78
+      84FFA16673FF965562FF8B414FFF872E3FDFFFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF009138488DB9728EF8BF7798F7B888A1FCF1E7ECFEBC8DA6FCEEE2
-      E8FEB35A82F7AC4F78F7BB90A6FDEDDEE5FEAE6F8DFBF0E7EBFFB06282F9A349
-      6DF8835C8DFA626BA7FB933F60F99E4466F99D4364F99C4263F99A4161F98B30
-      40C6FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      E8FEB35A82F7AC4F78F7BB90A6FDEDDEE5FEAE6F8DFBF0E7EBFFB06282F97A30
+      46FF362228FF3E272EFF3C242AFF3A2127FF381D24FF361A21FF34171DFF3113
+      18FDFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF008F36488DB56887F8BB6C
       90F7B76489F7C097ADFDEAD8E0FEC29CB0FDE5CED9FDAB4F77F7A84E74F8CFB3
       C2FEDEC1CEFDB48EA6FDCDCBDDFE3699E2FE1FA2F8FF159CF4FF332235FD9D43
@@ -1194,60 +1196,60 @@ object MainForm: TMainForm
       6EF8A3486CF8A1476AF8A04669F99F4567F99D4365F99C4263F99B4161F99940
       5FFA983F5EFA66749CFD202736FE4B1E2DFC81344DFB913A55FB903953FB8F37
       51FB8D364FFB8C354EFC8B344CFC872D3DC6FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF005EBCF8265CBDF9F857BBF9F852B9F9F84DB6F9F848B4
-      F9F843B2F9F83EADF5FD39A9F3FF34A7F2FF2FA5F2FF2BA3F2FF26A1F2FF219E
-      F2FF1C9CF2FF179AF2FF1C7AC1FE903C59FA963E5BFA953D5AFA943B58FA923A
+      FF00FFFFFF00FFFFFF005EBCF8005CBDF90057BBF90052B9F9224DB6F90548B4
+      F90743B2F9108B2F4132963E5BFF963E5BFF963E5BFF963E5BFF963E5BFF963E
+      5BFF963E5BFF963E5BFF963E5BFF903C59FA963E5BFA953D5AFA943B58FA923A
       56FB913954FB903852FB8E3751FB8D364FFB8C354DFC8A344BFC893349FC872C
-      3DC6FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0060BFF9284D9E
-      D0FF152E3EFF153040FF22506DFF45ACEDFF205678FF266C98FF113349FF2579
-      AFFF2FA8F6FF0C3048FF1B78B5FF20A2F8FF1BA0F8FF169EF8FF1078BEFF8938
-      54FA953C59FA933B57FA923A56FB913954FB8F3852FB8E3750FB8D364EFB8B35
-      4CFC8A344BFC883249FC873147FC872C3BC6FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF0060BFF9284893C2FF000000FF33739AFF071117FF245A
-      7DFF256289FF2A76A7FF15405CFF123A55FF2584C2FF010406FF1B76B2FF1158
-      86FF1684CCFF0B507DFF1078BEFF873751FA933B57FB913A55FB903953FB7A30
-      46FC722C41FC712A3FFD70293DFD6F293BFD6E283AFD6D2739FD6C2737FD7B28
-      37CBFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0060BFF9284893
-      C2FF000000FF4AA8E2FF17374BFF193F57FF15374DFF1F587CFF2A80B8FF030A
-      0FFF154C70FF0D344EFF17679BFF061E2EFF136EAAFF03131EFF1078BEFF8537
-      4FFB913954FB903853FB8E3751FB362228FE6F5860FF695057FF64474FFF5E3E
-      46FF59363DFF542D35FF4D232AFB591D2873FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF0060BFF9284893C2FF000000FF2A5E7FFF060F15FF2864
-      8AFF15374DFF1F587CFF39ACF7FF06131CFF020609FF1C71A8FF196FA7FF030D
-      13FF0A3D5EFF03131EFF1078BEFF85354DFB8F3852FB8E3750FB8D364EFB3E27
-      2EFEC39BA7FFB88996FFAD7884FFA26773FF975562FF8B414FFC832B3A65FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0060BFF92851A6
-      DBFF26516CFF24526EFF2F7099FF45ACEEFF102B3DFF205B81FF39ADF9FF2271
-      A4FF154B6EFF29A2F1FF239DEBFF0F4C75FF105E92FF0B507DFF1078BEFF8334
-      4AFB8E3750FB8C354EFC8B344CFC3C242AFEB88996FFAD7884FFA26673FF9755
-      62FF8B414FFC862A3B67FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF0060BFF9285CBDF9FF57BBF9FF52B9F9FF4DB6F9FF388C
-      C2FF10293AFF3089C2FF39ADF9FF34ABF8FF2FA9F8FF2AA7F8FF25A5F8FF20A2
-      F8FF1BA0F8FF169EF8FF1078BEFF813249FB8C354DFC8B344CFC89334AFC3A21
-      27FEAD7884FFA26673FF975562FF8B414FFC862C3D69FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0063B8FF125BBD
-      F97857BBF97853B9F9784DB7F97848B5F97844B3F9785076A7CD2E5D85FE2C5C
-      85FE2A5B85FE275A85FE255985FE225784FE205684FE1D5584FE1D4468FE8232
-      48FC8A344BFC893349FC873247FC381D24FEA16673FF975562FF8B414FFC852D
-      3C6BFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      3DC6FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0060BFF9004D9E
+      D000152E3E001530400122506D0045ACED052056781452B9F9FF1C9CF2FF1C9C
+      F2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9C
+      F2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9C
+      F2FF1C9CF2FF1C9CF2FF1C9CF2FF1078BEFFFFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF0060BFF9004893C2000000000033739A0007111701245A
+      7D002562891252B9F9FF1C9CF2FFFFFFFFFFFFFFFFFFFFFFFFFF1C9CF2FF1C9C
+      F2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FFFFFFFFFF1C9CF2FF1C9C
+      F2FF1C9CF2FFFFFFFFFF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1078
+      BEFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0060BFF9004893
+      C200000000004AA8E20017374B00193F570015374D1252B9F9FF1C9CF2FFFFFF
+      FFFF1C9CF2FF1C9CF2FFFFFFFFFF1C9CF2FF1C9CF2FF1C9CF2FFFFFFFFFF1C9C
+      F2FF1C9CF2FFFFFFFFFF5BBDF9FF1C9CF2FF5BBDF9FFFFFFFFFF1C9CF2FF1C9C
+      F2FF1C9CF2FF1C9CF2FF1C9CF2FF1078BEFFFFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF0060BFF9004893C200000000002A5E7F00060F15002864
+      8A0015374D0052B9F9FF1C9CF2FFFFFFFFFF1C9CF2FF1C9CF2FF5BBDF9FFFFFF
+      FFFF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FFFFFFFFFF5BBDF9FF1C9C
+      F2FF5BBDF9FFFFFFFFFF1C9CF2FFFFFFFFFF1C9CF2FF1C9CF2FFFFFFFFFF1078
+      BEFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0060BFF90051A6
+      DB0026516C0224526E032F70991945ACEE05102B3D4052B9F9FF1C9CF2FFFFFF
+      FFFF1C9CF2FF1C9CF2FF5BBDF9FFFFFFFFFF1C9CF2FF1C9CF2FFFFFFFFFF1C9C
+      F2FF1C9CF2FF1C9CF2FFFFFFFFFF1C9CF2FFFFFFFFFF1C9CF2FF1C9CF2FFFFFF
+      FFFF1C9CF2FF1C9CF2FFFFFFFFFF1078BEFFFFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF0060BFF9005CBDF90057BBF90052B9F90D4DB6F900388C
+      C20010293A3452B9F9FF1C9CF2FFFFFFFFFF5BBDF9FF5BBDF9FFFFFFFFFF1C9C
+      F2FF1C9CF2FF1C9CF2FFFFFFFFFF1C9CF2FF1C9CF2FF1C9CF2FF5BBDF9FFFFFF
+      FFFF5BBDF9FF1C9CF2FF1C9CF2FFFFFFFFFF5BBDF9FF1C9CF2FFFFFFFFFF1078
+      BEFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0063B8FF005BBD
+      F90057BBF90A53B9F90A4DB7F90548B5F90844B3F91E52B9F9FF1C9CF2FFFFFF
+      FFFFFFFFFFFFFFFFFFFF1C9CF2FFFFFFFFFF1C9CF2FF5BBDF9FFFFFFFFFF1C9C
+      F2FF1C9CF2FF1C9CF2FF1C9CF2FFFFFFFFFF1C9CF2FF1C9CF2FF1C9CF2FF5BBD
+      F9FFFFFFFFFFFFFFFFFF1C9CF2FF1078BEFFFFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00892D3D8D933B55FB943C59FA933B57FA923A55FB903953FB8F38
-      52FB8E3750FB8C364EFC8B354CFC8A334AFC883249FC873147FC863045FD361A
-      21FF965562FF8B414FFC832C3A6DFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF0052B9F9FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9C
+      F2FFFFFFFFFFFFFFFFFF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9C
+      F2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1078
+      BEFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0052B9F9FF35ACF6FF259F
+      F4FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9C
+      F2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9CF2FF1C9C
+      F2FF1C9CF2FF1C9CF2FF1C9CF2FF1078BEFFFFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00892D3D8D913A53FB933B
-      56FB913A55FB903953FB8F3751FB8D364FFB8C354EFC8B344CFC89334AFC8832
-      48FC873146FC853045FD842F43FD34171DFF8B414FFC832C3C6FFFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00892C3D86892F41E68A3043E1893042E1893042E1882E42E1872E
-      40E2872E3FE2872E3FE2862E3FE2862D3EE2852D3EE2852C3DE2852C3DE23013
-      18F8852D3D71FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF0033CCFF191078BEFF1078BEFF1078BEFF1078BEFF1078BEFF1078BEFF1078
+      BEFF1078BEFF1078BEFF1078BEFF1078BEFF1078BEFF1078BEFF1078BEFF1078
+      BEFF1078BEFF1078BEFF1078BEFF1078BEFF1078BEFF1078BEFF1078BEFF1078
+      BEFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0066CCFF024CAEFF0054C0
+      FF0954C0FF0254C0FF01FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF002A5B
+      85322A5B850A2A5B8512FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
